spade-tests/src/snapshots/spade_tests__integration__trait_tests__calling_methods_with_the_wrong_number_of_params_errors.snap
---
source: spade-tests/src/integration.rs
---
struct X {}
impl X {
    fn test(self) -> bool {true}
}

fn main(x: X) -> bool {
    x.test(1)
}


error: Expected 0 arguments, got 1
  ┌─ testinput:7:11
  │
7 │     x.test(1)
  │           ^^^ Expected 0 arguments


